# qadsiahpitchlibrary

./: README.md  __init__.py  canvas_test.html  example_main.py  example_plot_bq.py  plot.py  pyproject.toml
examples/: minimal_use_example.py
providers/: __init__.py  impect.py
qadsiahpitch/: __init__.py  core.py  plot.py
qadsiahpitch/providers/: impect.py
